--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_nav_bar: ^5.0.7
   flutter_statusbarcolor_ns: ^0.6.0
+  animations: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
